@@ -1,3 +1,8 @@
+2008-07-31  Kevin Layer  <layer@relay.known.net>
+
+	* Makefile: make --sign a make variable, so I can specify it
+	  as null
+
 2008-07-30  root  <root@gills.dancysoft.com>
 1.2.17
 	* blacklist.cl, smtp-server-checkers.cl: Never run blacklist
